lazy saturday commit

--- a/app/views/pay_rates/_form.html.erb
+++ b/app/views/pay_rates/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label :rate %>
-    <%= form.text_field :rate, id: :pay_rate_rate %>
+    <%= form.text_field :rate, id: :pay_rate_rate, :autofocus => true %>
   </div>
 
   <div class="field">
