--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,7 +19,7 @@
               <%= f.label :email, class: "control-label" %>
             </div>
             <div class=" col-sm-7">
-              <%= f.text_field :email, class: "form-control" %>
+              <%= f.text_field :email, class: "form-control", :autofocus => true %>
             </div>
           </div>
         </div>
