--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -5,7 +5,6 @@
         <% if @customer.errors.any? %>
             <div id="error_explanation">
               <h2><%= pluralize(@customer.errors.count, "error") %> prohibited this user from being saved:</h2>
-
               <ul>
                 <% @customer.errors.full_messages.each do |message| %>
                     <li><%= message %></li>
@@ -15,15 +14,13 @@
         <% end %>
 
 
-
-
         <div class="form-group">
           <div class="row">
             <div class="col-sm-2">
               <%= f.label :first_name, class: "control-label" %>
             </div>
             <div class=" col-sm-7">
-              <%= f.text_field :first_name, class: "form-control" %>
+              <%= f.text_field :first_name, class: "form-control" , :autofocus => true%>
             </div>
           </div>
         </div>
