--- a/app/views/user/pay_obligations/_form.html.erb
+++ b/app/views/user/pay_obligations/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label :superannuation %>
-    <%= form.text_field :superannuation, id: :user_pay_obligation_superannuation %>
+    <%= form.text_field :superannuation, id: :user_pay_obligation_superannuation, :autofocus => true %>
   </div>
 
   <div class="field">
@@ -28,6 +28,6 @@
 
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit  %>
   </div>
 <% end %>
