--- a/app/views/works/_form.html.erb
+++ b/app/views/works/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :date %>
-    <%= f.date_select :date %>
+    <%= f.date_select :date, :autofocus => true %>
   </div>
 
   <div class="field">
