correct pay calculator

--- a/app/views/user/pay_obligations/show.html.erb
+++ b/app/views/user/pay_obligations/show.html.erb
@@ -21,7 +21,7 @@
   <strong>Superannuation:</strong>
   <%= @user_pay_obligation.superannuation %></p>
 
-<h1>Gross pay Rate <%= @gross %></h1>
+<h1>Gross pay Rate <%= @user_pay_obligation.calculate %></h1>
 
 
 </div>
