update pay obligation

--- a/app/views/user/pay_obligations/edit.html.erb
+++ b/app/views/user/pay_obligations/edit.html.erb
@@ -1,6 +1,11 @@
+<div class="box">
+  <%= render 'user/pay_obligations/menu' %>
+</div>
+<div class="box">
 <h1>Editing Users Pay Obligation</h1>
 
 <%= render 'form', user_pay_obligation: @user_pay_obligation %>
 
 <%= link_to 'Show', @user_pay_obligation %> |
 <%= link_to 'Back', user_pay_obligations_path %>
+</div>
