--- a/app/views/user/pay_obligations/new.html.erb
+++ b/app/views/user/pay_obligations/new.html.erb
@@ -1,5 +1,6 @@
-<h1> Pay Obligation</h1>
+<%= render 'user/pay_obligations/menu' %>
+<div class="box"><h1> Pay Obligation</h1>
 
 <%= render 'form', user_pay_obligation: @user_pay_obligation %>
 
-<%= link_to 'Back', user_pay_obligations_path %>
+</div>
