--- a/app/views/user/pay_obligations/index.html.erb
+++ b/app/views/user/pay_obligations/index.html.erb
@@ -1,32 +1,40 @@
-<p id="notice"><%= notice %></p>
 <div class="box">
-<h1><%= @user.full_name %> Pay Rates</h1>
+  <h1><%= @user.full_name %> Pay Rates</h1>
 
-<table>
-  <thead>
+  <table>
+    <thead>
     <tr>
       <th>Superannuation</th>
       <th>Holiday</th>
       <th>Hourly rate</th>
       <th>Gross</th>
       <th colspan="3"></th>
+      <th></th>
     </tr>
-  </thead>
+    </thead>
 
-  <tbody>
+    <tbody>
     <% @user_pay_obligations.each do |user_pay_obligation| %>
       <tr>
         <td><%= user_pay_obligation.superannuation %>%</td>
         <td><%= user_pay_obligation.holiday %>%</td>
         <td><%= user_pay_obligation.hourly_rate %></td>
         <td><%= user_pay_obligation.calculate %></td>
+        <td><%= link_to edit_user_pay_obligation_path(user_pay_obligation.user_id, user_pay_obligation) do %>
+            <i class='fa fa-edit fa-lg' aria-hidden="true"></i>
+          <% end %>
 
-      </tr>
+          <%= link_to  user_pay_obligation_path(user_pay_obligation.user_id, user_pay_obligation),
+                                                method: :delete ,
+                                                data: { confirm: 'Are you sure?' } do %>
+          <i class="fa fa-trash fa-lg"></i>
+          <% end %>
+          </tr>
     <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
 
-<br>
+  <br>
 
-<%= link_to 'New Pay Rate', new_user_pay_obligation_path, class: 'btn btn-default' %>
+  <%= link_to 'New Pay Rate', new_user_pay_obligation_path, class: 'btn btn-default' %>
 </div>
