--- a/app/views/user/pay_obligations/index.html.erb
+++ b/app/views/user/pay_obligations/index.html.erb
@@ -1,6 +1,5 @@
-<div class="box">
-  <h1><%= @user.full_name %> Pay Rates</h1>
-
+<%= render 'users/menu' %>
+<div class="box"
   <table>
     <thead>
     <tr>
