--- a/app/views/user/pay_obligations/new.html.erb
+++ b/app/views/user/pay_obligations/new.html.erb
@@ -1,4 +1,6 @@
+<div class="box">
 <%= render 'user/pay_obligations/menu' %>
+</div>
 <div class="box"><h1> Pay Obligation</h1>
 
 <%= render 'form', user_pay_obligation: @user_pay_obligation %>
