update pay obligation with passing test

--- a/app/views/user/pay_obligations/new.html.erb
+++ b/app/views/user/pay_obligations/new.html.erb
@@ -1,6 +1,5 @@
-<div class="box">
-<%= render 'user/pay_obligations/menu' %>
-</div>
+
+<%= render 'users/menu' %>
 <div class="box"><h1> Pay Obligation</h1>
 
 <%= render 'form', user_pay_obligation: @user_pay_obligation %>
