--- a/app/views/user/pay_obligations/index.html.erb
+++ b/app/views/user/pay_obligations/index.html.erb
@@ -1,5 +1,8 @@
 <%= render 'users/menu' %>
-<div class="box"
+
+<div class="box">
+  <h1><%= @user.full_name %> Pay Rates</h1>
+
   <table>
     <thead>
     <tr>
@@ -17,7 +20,7 @@
       <tr>
         <td><%= user_pay_obligation.superannuation %>%</td>
         <td><%= user_pay_obligation.holiday %>%</td>
-        <td><%= user_pay_obligation.hourly_rate %></td>
+        <td>$<%= user_pay_obligation.hourly_rate %></td>
         <td><%= user_pay_obligation.calculate %></td>
         <td><%= link_to edit_user_pay_obligation_path(user_pay_obligation.user_id, user_pay_obligation) do %>
             <i class='fa fa-edit fa-lg' aria-hidden="true"></i>
