--- a/app/views/users/_menu.html.erb
+++ b/app/views/users/_menu.html.erb
@@ -1,4 +1,4 @@
-<div><h1><%= @user.full_name %></h1></div>
+<div class="box"><h1><%= @user.full_name %></h1></div>
 
 <div class="box">
   <div class="btn-group">
