--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -6,45 +6,4 @@
 <div class="box col-xs-12">
 <p id="notice"><%= notice %></p>
 <div class=" pdf-background ">
-<div class="alwaysbreak">
-  <table style="width: 100%; ">
-    <tr class="pdf-tr ">
-      <td class="pdf-td"><h1>Tax Invoice</h1>
-      </td>
-      <td class="pdf-td">
-        <div align="right" >
-          <h3>For time period</h3>
-          <%= @invoice.invoice_date.strftime("%A %b %d") %>
-          <h4>Invoice number#  <%= @invoice.id %></h4>
-        </div>
-      </td>
-    </tr>
-    <tr>
-      <td colspan="2">
-        <h2>to: <%= @invoice.customer_full_name %></h2>
-        <p><%= @invoice.customer_address %> <br>
-          ABN: <%= @invoice.customer_abn %></p>
-
-        <p>
-        <h2><%= @invoice.owner_full_name %> </h2>
-        <%= @invoice.owner_address %> <br>
-        ABN: <%= @invoice.owner_abn %>
-
-        <h1>For the <%= @invoice.project.name.humanize %> Project</h1>
-        </p>
-      </td>
-    </tr>
-    <tr>
-      <td colspan="2">
-        <%= render 'invoice_table' %>
-    <tr>
-      <td>Please pay you invoice with in 2 week or men with guns will come to you house and take possession of you
-        dog
-      </td>
-    </tr>
-</table>
-</div>
-</div>
-</div>
-
-</div>
+  <%= render 'show_invoice' %>
