--- a/app/views/simple_calendar/_my_calendar.html.erb
+++ b/app/views/simple_calendar/_my_calendar.html.erb
@@ -21,7 +21,18 @@
         <% week.each do |day| %>
           <% if @time_sheets.where(time_period: day).has_time_sheet? %>
 
-            <%= content_tag :td, class: [calendar.td_classes_for(day), 'has-time-sheet'] do %>
+            <% if @time_sheets.where(time_period: day).has_invoice? %>
+
+              <%= content_tag :td, class: [calendar.td_classes_for(day), 'has-time-sheet'] do %>
+                <%= link_to current_day_path(day) do %>
+                  <% block.call day, sorted_events.fetch(day, []) %>
+                <% end %>
+                <h1 style="padding: 0;margin: 0">
+                  <%= Work.find_by(time_sheet: @time_sheets.where(time_period: day)).hour %>
+                </h1>
+              <% else %>
+
+                <%= content_tag :td, class: [calendar.td_classes_for(day), 'has-time-sheet'] do %>
               <%= link_to current_day_path(day) do %>
                 <% block.call day, sorted_events.fetch(day, []) %>
               <% end %>
@@ -31,6 +42,9 @@
 
 
             <% end %>
+
+
+              <% end %>
           <% else %>
             <%= content_tag :td, class: calendar.td_classes_for(day) do %>
               <%= link_to current_day_path(day) do %>
