--- a/app/assets/stylesheets/time_sheets.scss
+++ b/app/assets/stylesheets/time_sheets.scss
@@ -83,6 +83,13 @@ body {
     padding: 20px;
 
   }
+  .has-invoice {
+    background: url('tick.png');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    padding: 20px;
+
+  }
 
   .past {}
   .future {}
