--- a/app/views/time_sheets/_form.html.erb
+++ b/app/views/time_sheets/_form.html.erb
@@ -16,7 +16,7 @@
     <div class="actions">
       <%= f.submit "Save", class: 'btn btn-default' %>
 
-      <%= link_to_add_fields "Add field", f, :works, 'works' %>
+      <%= link_to_add_fields "Add Work Hours", f, :works, 'works' %>
 
     </div>
 
@@ -25,13 +25,13 @@
         <th class="col-xs-7 col-sm-4">Project</th>
         <th class="col-xs-5 col-sm-2">Hours</th>
         <th class="hidden-xs col-sm-6">Description</th>
+        <th class="col-sm-1 hidden-xs"> Invoiced</th>
+      </tr>
 
-        <th class="col-sm-1 hidden-xs"></th>
-      </tr>
       <%= f.fields_for :works do |builder| %>
-          <%= render 'works', f: builder %>
+        <%= render 'works', f: builder %>
       <% end %>
-      </tr>
+
     </table>
     </div>
 
