--- a/app/views/time_sheets/_works.html.erb
+++ b/app/views/time_sheets/_works.html.erb
@@ -1,7 +1,30 @@
-<tr style="  outline: 2px solid #ccc;">
-  <td colspan="3">
+<tr style="padding: 0%;">
+  <% if f.object.has_invoice? %>
 
+    <td colspan="5" style="padding: 0%; margin-bottom: 0px;">
+      <li class="clickable shadow" style="padding: 1%; margin-bottom: 0px;">
 
+        <div class=" dropdown col-xs-7 col-sm-4 " style="padding: 0%;">
+          <%= f.object.project.name %>
+        </div>
+        <div class=" col-xs-5 col-sm-2" style="padding: 0%">
+          <%= f.object.hour %>
+        </div>
+        <div class="field col-xs-11 col-sm-4" style='padding: 0%'>
+          <%= f.object.description %>
+        </div>
+        <div class="field col-xs-1 col-sm-1">
+          <%= link_to "", invoice_path(f.object.invoice_id) %>
+        </div>
+
+        <%= image_tag('tick.png', size: "40x40") %>
+
+      </li>
+    </td>
+
+  <% else %>
+    <tr style="  outline: 2px solid #ccc;">
+      <td colspan="3">
     <div class=" dropdown col-xs-7 col-sm-4 " style="padding: 0%;">
           <%= f.select(:project_id, options_for_select(Project.select_attributes,f.object.project_id),{},class: ' btn btn-default form-control') %>
   </div>
@@ -12,10 +35,14 @@
       <%= f.text_area :description, cols: "60", rows: "2", class: 'form-control description-field', placeholder: 'Description' %>
     </div>
     <div class="field col-xs-1 col-sm-1">
-      <%= f.hidden_field :_destroy %>
+
       <%= link_to "remove", '#', class: "remove_fields", style: 'text-overflow:hidden' %>
-    </div>
+      <%= f.hidden_field :_destroy %>
+      <td> <%= image_tag('redcross.png', size: "40x40") %></td>
 
-  </td>
+      </div>
+
+      </td>
+  <% end %>
+
 </tr>
-
