--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -101,6 +101,26 @@ th {
     //font-size: 150%;
 
   }
+
+td.shadow {
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 19px;
+  margin-bottom: 10px;
+}
+
+td.darkShadow {
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: grey;;
+}
+
+td.background {
+  //background-color: grey;
+  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.6), 6px 12px 30px 0 rgba(0, 0, 0, 0.19);
+  //font-size: 150%;
+
+}
+
+
   .btn-primary {
     color: #fff;
     background-color: #0495c9;
