email invoice button

--- a/app/views/invoices/_show_invoice.html.erb
+++ b/app/views/invoices/_show_invoice.html.erb
@@ -43,7 +43,7 @@
 </tr>
 <tr>
   <td colspan="2">
-    <%= render 'invoice_table.html.erb' %>
+    <%= render 'invoices/invoice_table.html.erb' %>
 <tr>
   <td>Please pay you invoice with in 2 week or men with guns will come to you house and take possession of you
     dog
