--- a/app/views/invoices/show.pdf.erb
+++ b/app/views/invoices/show.pdf.erb
@@ -23,6 +23,6 @@
 
 <body onload="number_pages()" class="pdf-background">
   <div class="alwaysbreak">
-    <%= render 'show_invoice.html.erb' %>
+    <%= render 'invoices/show_invoice.html.erb' %>
 </body>
 </html>
