--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -48,7 +48,18 @@
           </div>
         </div>
 
-        <div class="form-group">
+      <div class="form-group">
+        <div class="row">
+          <div class="col-sm-2">
+            <%= f.label :email, class: "control-label" %>
+          </div>
+          <div class=" col-sm-7">
+            <%= f.email_field :email, class: "form-control" %>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
           <div class="row">
             <div class="col-sm-2">
               <%= f.label :street, class: "control-label" %>
