git hub intergration

--- a/app/views/identities/index.html.erb
+++ b/app/views/identities/index.html.erb
@@ -28,5 +28,6 @@
 
 
 
-<%= link_to 'New Google', '/admin/auth/google' %>
-<%= link_to 'New facebook', '/admin/auth/facebook' %>
+<%= link_to 'oogle', '/admin/auth/google', class: 'btn btn-default fa fa-lg fa-google' %>
+<%= link_to 'acebook', '/admin/auth/facebook', class: 'btn btn-default fa fa-lg fa-facebook' %>
+<%= link_to ' GitHub', '/admin/auth/github', class: 'btn btn-default fa fa-lg fa-github' %>
