--- a/app/views/time_sheets/_works.html.erb
+++ b/app/views/time_sheets/_works.html.erb
@@ -32,12 +32,12 @@
       <%= f.number_field :hour, min: 0, class: 'form-control hours-field', step: :any, placeholder: 'Hours', :autofocus => true %>
     </div>
     <div class="field col-xs-12 col-sm-5" style='padding: 0%'>
-      <%= f.text_area :description, cols: "60", rows: "2", class: 'form-control description-field', placeholder: 'Description' %>
+      <%= f.text_area :description, cols: "60", rows: "1", class: 'form-control description-field', placeholder: 'Description' %>
     </div>
     <div class="field col-xs-1 col-sm-1">
 
       <%= link_to "remove", '#', class: "remove_fields", style: 'text-overflow:hidden' %>
-      <%= f.hidden_field :_destroy %>
+      <%= f.check_box :_destroy %>
       <td> <%= image_tag('redcross.png', size: "40x40") %></td>
 
       </div>
