git hub intergration

--- a/app/views/social_info/_commits.html.erb
+++ b/app/views/social_info/_commits.html.erb
@@ -7,12 +7,9 @@
   </tr>
   <% @github.commits.each do |v, i| %>
     <tr>
-
       <td>  <%= v['commit']['message'] %></td>
       <td>  <%= Time.parse(v['commit']['author']['date']).strftime("%A %b/%d/%Y") %></td>
-      <td>  <%= link_to 'GO TO', v['html_url'], class: 'btn btn-default' %> <%= link_to 'create pull request', '#', class: 'btn btn-default' %></td>
-
-
+      <td>  <%= link_to 'GO TO', v['html_url'], class: 'btn btn-default' %></td>
     </tr>
   <% end %>
 
