--- a/app/views/time_sheets/show.html.erb
+++ b/app/views/time_sheets/show.html.erb
@@ -7,6 +7,6 @@
 <div id="time_sheet_partial">
   <%= render 'edit' %>
   <div class="box">
-    <%= render 'commits' %>
+    <%= render 'commits' rescue '' %>
   </div>
 </div>
