update github for multiple oproject

--- a/app/views/time_sheets/_commits.html.erb
+++ b/app/views/time_sheets/_commits.html.erb
@@ -5,7 +5,8 @@
     <th>Date</th>
     <th>Link</th>
   </tr>
-  <% @github.each do |v, i| %>
+  <% @github.each do |project| %>
+    <% project.each do |v| %>
     <tr>
 
       <td>  <%= v['commit']['message'] %></td>
@@ -14,6 +15,7 @@
 
 
     </tr>
+  <% end %>
   <% end %>
 
 
