--- a/app/assets/stylesheets/time_sheets.scss
+++ b/app/assets/stylesheets/time_sheets.scss
@@ -56,6 +56,7 @@ body {
     &:hover {
       color: white;
       background-color: gray;
+      z-index: -1;
 
     }
   }
@@ -65,7 +66,8 @@ body {
   }
 
   .wday-0 {
-    background-color: lightgray
+    background-color: lightgray;
+    z-index: -1;
   }
   .wday-1 {}
   .wday-2 {}
@@ -73,12 +75,13 @@ body {
   .wday-4 {}
   .wday-5 {}
   .wday-6 {
-    background-color: lightgray
+    background-color: lightgray;
+    z-index: -1;
   }
 
   .today {
     background: lightgreen;
-
+    z-index: -1;
   }
 
 
@@ -88,10 +91,12 @@ body {
   .start-date {}
 
   .prev-month {
-    background: #DDD;
+    background-color: #DDD;
+    z-index: -1;
   }
   .next-month {
-    background: #DDD;
+    background-color: #DDD;
+    z-index: -1;
   }
   .current-month {}
 
