--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -6,7 +6,8 @@
     </div>
 <% end %>
 
-  <div class="box col-xs-12">
+
 
     <div class=" pdf-background ">
   <%= render 'show_invoice' %>
+    </div>
