--- a/app/views/invoices/_show_invoice.html.erb
+++ b/app/views/invoices/_show_invoice.html.erb
@@ -1,4 +1,4 @@
-<div class="alwaysbreak">
+<div class="alwaysbreak" style="padding: 10px">
   <table style="width: 100%; ">
     <tr class="pdf-tr ">
       <td class="pdf-td"><h1>Tax Invoice</h1>
@@ -14,12 +14,15 @@
           <%= @works.first.time_sheet.time_period.strftime("%A %b %d ") if @invoice.works.first.present? %>|
           <%= @works.last.time_sheet.time_period.strftime("%A %b %d ") if @invoice.works.last.present? %>
         </div>
-</div>
+
 </td>
 </tr>
 <tr>
   <td colspan="2">
-    <h2>Bill to: <%= @invoice.customer_full_name %></h2>
+    <div class="pull-right"><h1>Balance: $<%= @total %></h1></div>
+
+    <h2>Bill to: <%= @invoice.project.name %></h2>
+    <p><%= @invoce.customer_first_name rescue '' %> <%= @invoice.customer_last_name rescue '' %></p>
     <p><%= @invoice.customer_address %> <br>
       ABN: <%= @invoice.customer_abn %></p>
 
@@ -35,23 +38,20 @@
     <strong>Account No: </strong> 000490121 <strong>bsb:</strong> 484 799
   </p></td>
 </tr>
-</td>
-</tr>
 
-</p>
-</td>
-</tr>
 <tr>
-  <td colspan="2">
+  <td colspan="2" style="text-align: center; vertical-align: middle;">
     <%= render 'invoices/invoice_table.html.erb' %>
 <tr>
-  <td>Please pay you invoice with in 2 week or men with guns will come to you house and take possession of you
-    dog
-  </td>
+
 </tr>
 </table>
-</div>
-</div>
-</div>
 
+
+  <div class="footer">
+    <hr>
+    <p style="font-size: .5em ; padding-left: 10px; padding-right: 20px"> Please pay you invoice with in 2 week or men
+      with guns will come to you house and take possession of you dog</p>
+    <hr>
+</div>
 </div>
