--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -1,22 +1,27 @@
 <div class="box">
   <p id="notice"><%= notice %></p>
   <h1>New Invoice</h1>
-<div style="padding:10px">
-  <%= form_for Invoice.new do |f| %>
+<div  style="padding:10px">
+ <div class="row">
+   <div class="col-lg-4">
+  <%= form_for Invoice.new, class: 'form-group  ' do |f| %>
 
 
       <%= f.hidden_field :project, value: @project.id %>
-      <%= f.submit "Save Invoice", class: 'btn btn-default' %>
+      <%= f.submit "Save Invoice", class: 'btn btn-success',data: { confirm: 'are you sure?'} %>
+
       <%= link_to 'Back', invoices_path, class: 'btn btn-default' %>
 
   <% end %>
+   </div>
+   <div class="col-lg-4 pull-right">
+  <%= form_tag new_invoice_url, class: 'form-group ', method: :get do %>
 
-  <%= form_tag new_invoice_url, class: 'form-group', method: :get do %>
-
-    <%= select_tag(:search, options_for_select(Project.select_attributes, params[:search]), :onchange => "this.form.submit();", class: 'btn btn-default form-control ') %>
+    <%= select_tag(:search, options_for_select(Project.select_attributes, params[:search]), :onchange => "this.form.submit();", class: 'btn btn-default form-control col-lg-4 ') %>
 
     <% end %>
-
+   </div>
+ </div>
 
 </div>
     <table style="width: 100%; ">
