--- a/app/views/time_sheets/index.html.erb
+++ b/app/views/time_sheets/index.html.erb
@@ -1,8 +1,10 @@
 <h1>Time Sheets For <%= @time_sheets.first.user.full_name rescue '' %></h1>
 <% if can? :read, User %>
-  <%= form_tag({}, {:method => :get}) do %>
+  <%= form_tag '', method: :get,  class: 'form-group row' do %>
+  <div class="col-lg-4">
     <%= select_tag(:user_id, options_for_select(User.select_attributes), class: ' btn btn-default form-control') %>
-    <%= submit_tag 'Search' %>
+  </div>
+    <%= submit_tag 'Search', class: 'btn btn-default' %>
   <% end %>
 <% end %>
 
