--- a/app/views/time_sheets/_my_calendar.html.erb
+++ b/app/views/time_sheets/_my_calendar.html.erb
@@ -21,41 +21,39 @@
         <% week.each do |day| %>
           <% t = @time_sheets.includes(:works).find_or_initialize_by(time_period: day) %>
 
-          <% if t.has_time_sheet? %>
+            <% if t.has_time_sheet? %>
 
-            <% if Work.find_by(time_sheet: t).invoice.present? %>
+              <% if Work.find_by(time_sheet: t).invoice.present? %>
+                  <%= content_tag :td, class: [calendar.td_classes_for(day), 'has-invoice'] do %>
+                    <%= link_to current_day_path(day) do %>
+                      <% block.call day, sorted_events.fetch(day, []) %>
+                    <% end %>
+                  <% end %>
+              <% else %>
 
-              <%= content_tag :td, class: [calendar.td_classes_for(day), 'has-invoice'] do %>
-                <%= link_to current_day_path(day) do %>
-                  <% block.call day, sorted_events.fetch(day, []) %>
-                <% end %>
+                  <%= content_tag :td, class: [calendar.td_classes_for(day), 'has-time-sheet'] do %>
+                    <%= link_to current_day_path(day) do %>
+                      <% block.call day, sorted_events.fetch(day, []) %>
+                    <% end %>
+                  <% end %>
 
               <% end %>
+
             <% else %>
-
-              <%= content_tag :td, class: [calendar.td_classes_for(day), 'has-time-sheet'] do %>
+              <%= content_tag :td, class: calendar.td_classes_for(day) do %>
                 <%= link_to current_day_path(day) do %>
                   <% block.call day, sorted_events.fetch(day, []) %>
-                <% end %>
-              <% end %>
+
+                 <% end %>
+               <% end %>
 
             <% end %>
-          <% else %>
-            <%= content_tag :td, class: calendar.td_classes_for(day) do %>
-              <%= link_to current_day_path(day) do %>
-                <% block.call day, sorted_events.fetch(day, []) %>
-
-              <% end %>
-            <% end %>
-
-          <% end %>
 
         <% end %>
-        <% if can? :read, User %>
-          <td>
-            <%= button_tag 'Approve' %>
-
-        <% end %>
+        <%# if can? :read, User %>
+<!--          <td>-->
+            <%#= button_tag 'Approve' %>
+        <%# end %>
       </tr>
 
     <% end %>
