remove github from timesheet

--- a/app/views/time_sheets/show.html.erb
+++ b/app/views/time_sheets/show.html.erb
@@ -6,7 +6,7 @@
 <%= render 'buttons' %>
 <div id="time_sheet_partial">
   <%= render 'edit' %>
-  <div class="box">
-    <%= render 'commits' rescue '' %>
-  </div>
+<!--  <div class="box">-->
+    <%#= render 'commits' rescue '' %>
+<!--  </div>-->
 </div>
